--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-node_modules
-.next
-out
-.env
+# Node
+node_modules/
+dist/
+build/
+
+# OS files
+.DS_Store
+Thumbs.db
+ehthumbs.db
+
+# Logs
+*.log
+
+# IDEs
+.vscode/
+.idea/
+
+# Caches
+*.zip
+*.rar
+*.7z
+*.exe
+*.dmp
+AppData/
