--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.4.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5",
+    "@types/react": "^18.2.43",
+    "@types/node": "^20.11.19"
   }
 }
