--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "domio",
   "version": "1.0.0",
@@ -8,14 +7,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.0",
-    "next": "^13.4.0",
-    "postcss": "^8.4.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^3.4.0"
+    "next": "13.4.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.4.5",
     "@types/react": "^18.2.43",
     "@types/node": "^20.11.19"
