--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "@supabase/supabase-js": "^2.42.5"
+    "@supabase/supabase-js": "^2.42.5",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "typescript": "^5.4.5",
