--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "typescript": "^5.4.5",
     "@types/react": "^18.2.43",
-    "@types/node": "^20.11.19"
+    "@types/node": "^20.11.19",
+    "@types/leaflet": "^1.9.4"
   }
 }
