--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
-
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    {
+      "source": "/some-path/:match*",
+      "destination": "/some-handler"
+    }
+  ]
 }
