--- a/package.json
+++ b/package.json
@@ -7,20 +7,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.4.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
+    "next": "^13.4.0",
     "postcss": "^8.4.0",
-    "@supabase/supabase-js": "^2.42.5",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.4.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
-    "@types/react": "^18.2.43",
     "@types/node": "^20.11.19",
-    "@types/leaflet": "^1.9.4"
+    "@types/react": "^18.2.43",
+    "@types/react-toastify": "^9.0.8",
+    "typescript": "^5.4.5"
   }
 }
