--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "leaflet": "^1.9.4",
     "next": "^13.4.0",
     "postcss": "^8.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tailwindcss": "^3.4.0",
-    "react-toastify": "^9.1.1"
+    "react-leaflet": "^4.2.1",
+    "react-toastify": "^9.1.1",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.43",
     "typescript": "^5.4.5"
