--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.0.0",
     "react-leaflet": "^4.2.1",
     "react-toastify": "^9.1.1",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "@supabase/supabase-js": "^2.0.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
