--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "lucide-react": "^0.308.0",
     "leaflet": "^1.9.4",
     "next": "^13.4.0",
     "postcss": "^8.4.0",
