--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-leaflet": "^4.2.1",
     "react-toastify": "^9.1.1",
     "tailwindcss": "^3.4.0",
-    "@supabase/supabase-js": "^2.0.0"
+    "@supabase/supabase-js": "^2.0.0",
+    "framer-motion": "^10.16.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
